<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- used for app display and main activity. -->
    <string name="app_name">HelloWorldAndroid</string>
    <string name="hello_world">Hello world this is a test!</string>
    <string name="action_settings">Settings</string>
    <string name="jimbo_hello"> hello jimmy, here is am!!!</string>

    <color name="opaque_red">#f00</color>
    <!-- adding color constant. -->


    <!-- adding for button to start and stop service. -->
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    <!-- string used for broadcast intent. -->
    <string name="broadcast_intent">Broadcast Intent</string>

    <!-- strings used for content providers -->
    <string name="add_name">Add Name</string>
    <string name="retrieve_students">Retrieve Students</string>
    <string name="grade">Grade</string>
    <string name="name">Name</string>

    <!-- fragment demo area -->
    <string name="frag_demo">Start Fragment Demo</string>
    <string name="title_activity_sample_fragment">SampleFragmentActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landscape_message">This is Landscape mode fragment</string>
    <string name="portrait_message">This is Portrait mode fragment</string>

    <!-- intent demos area. -->
    <string name="intent_demos">Intent Demos</string>
    <string name="title_activity_intent_demo">IntentDemoActivity</string>
    <string name="start_browser">Start Browser</string>
    <string name="start_phone">Start Phone</string>
    <string name="title_activity_custom_intent_filter">CustomIntentFilterActivity</string>

    <!-- this is for the intent filter demo. -->
    <string name="start_browser_a">Start Browser with VIEW action</string>
    <string name="start_browser_b">Start Browser with LAUNCH action</string>
    <string name="start_browser_c">Exception Condition</string>

    <!-- this is for the UI layout examples. -->
    <string name="title_activity_user_iface_layout">UserIfaceLayoutActivity</string>
    <string name="start_service_UI_Sample">start_service_UI_Sample</string>
    <string name="stop_service_UI_Sample">stop_service_UI_Sample</string>
    <string name="UI_Sample_Demo_Activity">UISampleDemoActivity</string>
    <string name="reminder">Enter your name</string>
    <string name="done">Done</string>
    <string name="title_activity_single_view">SingleViewActivity</string> <!-- new item for single view image viewer -->
    
    <!-- UI controls chapter.. -->
    <string name="enter_text">Done</string>
    <string name="show_the_text">how_the_tex</string>
    
    <!-- used for event handler chapter -->
    <string name="button_small">Small Font</string>
	<string name="button_large">Large Font</string>
	
	<!-- custom component demo -->	
	<string name="custom_component_demo">Jimmy custom component</string>

</resources>
